--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,9 @@
 # Site Settings
-title: Mere Blog Theme
-tagline: Mere Blog Theme
-email: your-email@domain.com
+title: Internet is for Porn
+tagline: Anything nostalgic, meme and internet culture related.
+email: info@internetisforporn.com
 description: >
-  The demo site for Mere Blog Theme, made for Jekyll and GitHub pages websites
+  Anything nostalgic, meme and internet culture related.
 baseurl: "/mere-blog-theme"
 url: "https://www.csrhymes.com"
 permalink: pretty
